<resources>
    <string name="app_name">Trello</string>
    <string name="kanbanBoard">Trello</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="move_teamwork_forward_even_on_the_go">Move teamwork forward - even on the go</string>
    <string name="by_signing_up_you_agree_to_our_terms_of_services_and_privacy_policy">By signing up, you agree to our Terms of services and Privacy Policy</string>
    <string name="contact_us">Contact support</string>
    <string name="sign_in_with_apple">SIGN IN WITH APPLE</string>
    <string name="apple_logo">apple logo</string>
    <string name="sign_in_with_microsoft">SIGN IN WITH MICROSOFT</string>
    <string name="microsoft_logo">microsoft logo</string>
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="google_logo">google logo</string>
    <string name="sign_in_with_email">SIGN IN WITH EMAIL</string>
    <string name="email_icon">email icon</string>
    <string name="notification_subheading">Get notified when you\'re mentioned. have upcoming due dates and more. You can change your notification settings any time.</string>
    <string name="notification_heading">Stay up to date on your Trello boards</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="cancel_notification">Maybe later</string>
    <string name="logging_in">Logging you in&#8230;</string>

    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your email id and password, to continue
        with us.</string>
    <string name="sign_in">SIGN IN</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="image_contentDescription">Image</string>
    <string name="username">Username</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <string name="adding_places">Create Board</string>
    <string name="board_name">Board Name</string>
    <string name="create">CREATE</string>
    <string name="create_board">Create Board</string>

    <string name="no_boards_are_available">No Boards are available!!!</string>

    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="cd_intro_illustration">Teamwork illustration</string>
    <string name="cd_app_logo">Trello Logo</string>

    <string name="cd_cancel_add_list">Cancel add list</string>
    <string name="cd_confirm_add_list">Confirm add list</string>
    <string name="cd_edit_list_name">Edit list name</string>
    <string name="cd_delete_list">Delete list</string>
    <string name="cd_cancel_edit_list">Cancel edit list</string>
    <string name="cd_save_list_name">Save list name</string>
    <string name="cd_cancel_add_card">Cancel add card</string>
    <string name="cd_confirm_add_card">Confirm add card</string>
    <string name="cd_board_image">Board cover image</string>

    <string name="cd_change_board_image">Change board cover image</string>
    <string name="err_msg_enter_board_name">Please enter a board name</string>

</resources>