<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffbfe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_notification_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/notification_illustration" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_in_text_margin"
            android:gravity="center"
            android:text="@string/notification_heading"
            android:textSize="@dimen/sign_in_text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sign_in_text_margin"
            android:gravity="center"
            android:text="@string/notification_subheading"
            android:textSize="@dimen/sign_in_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_notification_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/notification_button_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/notification_button"
            android:text="@string/enable_notifications"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_intro_button_text_size"
            app:cornerRadius="8dp" />

        <Button
            android:id="@+id/btnCancelNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_intro_button_margin"
            android:layout_marginEnd="@dimen/activity_intro_button_margin"
            android:background="@drawable/notification_cancel_button"
            android:text="@string/cancel_notification"
            android:textColor="@color/colorPrimaryBlue"
            android:textSize="@dimen/activity_intro_button_text_size" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>