<?xml version="1.0" encoding="utf-8"?>
<!--TODO (Step 3: Design the My Profile Screen view.)-->
<!--START-->
<!--All the constant values are added in their folders and files :
       1. Drawable values are added in the drawable folders.
       2. String values in the strings.xml file.
       3. Dimen values in the dimens.xml file.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MyProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_my_profile_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryBlue"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <!--This layout is just used for applying a background image to the screen below the toolbar.-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
            android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
            android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
            android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/my_profile_screen_content_padding">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_user_image"
                    android:layout_width="@dimen/my_profile_user_image_size"
                    android:layout_height="@dimen/my_profile_user_image_size"
                    android:contentDescription="@string/image_contentDescription"
                    android:src="@drawable/ic_user_place_holder" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:cursorColor="@color/black"
                    android:layout_marginTop="@dimen/my_profile_name_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="name"
                        android:hint="@string/name"
                        android:inputType="textPersonName|textCapWords"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:cursorColor="@color/black"
                    android:layout_marginTop="@dimen/my_profile_et_email_marginTop">

                    <!--TODO (Step 4: Here we make the email EditText as focusable false. As it should not be editable.)-->
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:cursorColor="@color/black"
                    android:layout_marginTop="@dimen/my_profile_et_mobile_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="phone"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:textSize="@dimen/et_text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/my_profile_btn_update_marginTop"
                    android:background="@drawable/shape_button_rounded"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout><!--END-->